[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
readme = "README.md"
packages = [{include = "{{ cookiecutter.project_slug }}"}]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.4.0"
pyproject-flake8 = "^6.0.0.post1"
pytest-cov = "^4.1.0"

[tool.flake8]
max-line-length = 5

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
